Update SystemNotifications notification ghosts to have lower z-index so they appear under drop-down menus in AdminThemeDefault, per request issue #1419

--- a/wire/modules/System/SystemNotifications/Notifications.css
+++ b/wire/modules/System/SystemNotifications/Notifications.css
@@ -134,6 +134,10 @@
 	padding: 0;
 }
 
+.AdminThemeDefault #NotificationGhosts {
+	z-index: 199; /* makes them appear under drop down menus */
+}
+
 #NotificationGhosts.NotificationGhostsRight {
 	left: auto;
 	right: 0;
